[package]
name = "testdriver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "testdriver"
path = "src/lib.rs"

[dependencies]
anyhow = "^1.0"
rand = "^0.8"
async-process = "^2"
async-trait = "^0.1"
futures = "^0.3"
tokio = { version = "^1", features = ["full", "test-util"] }
tracing = { version = "0.1.40", default-features = false, features = [
  "attributes",
  "log",
] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
unshare = "0.7.0"
